Added a dashboard page, fixed some typo with the resume page

--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Xuesen Zhao</title>
+<title>Academic &amp; Professional Experiences</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -360,40 +360,69 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About Xuesen Zhao</h1>
+<h1 class="title toc-ignore">Academic &amp; Professional
+Experiences</h1>
 
 </div>
 
 
-<div id="welcome-to-my-page" class="section level1">
-<h1>Welcome to my page!</h1>
-<p>My name is Xuesen Zhao, a first-year Biostatistics stude nt at
-Columbia University School of Public Health. I graduated from Wake
-Forest University in May 2022, with a Bachelors of Science degree in
-Biochemistry &amp; Molecular Biology, and a double major in
-statistics.</p>
-<p>This <a href="Resume.html">page</a> listed most of the major academic
-and professional experiences I’ve had over the past years. Links to my
-<a href="https://github.com/Theonlyviper66">Github</a>, and <a
-href="https://www.linkedin.com/in/xuesen-zhao/">linkedin</a> could be
-found here as well as in the navigation bar.</p>
-<div id="flexdashboard-of-instacart-data" class="section level2">
-<h2>Flexdashboard of instacart data</h2>
-<p>The dataset contains information on over 3 million online grocery
-orders from more than 200,000 instacart users in 2017. The original
-dataset contains 1,384,617 rows and 15 variables. Examples of the
-variables include the name of the product, the hour of day on which the
-order was placed, if the product has been ordered by the user in the
-past, etc. A complete description of the variables and detailed
-information about the dataset could be found <a
-href="https://p8105.com/dataset_instacart.html">here</a>.</p>
-<p>Our goal is to visualize some trends in online grocery purchasing
-based on this particular dataset. For clarity purpose, 2000 samples were
-randomly selected from the original dataset. A dashboard is created <a
-href="instacart_dashboard.html">here</a>. Chart A presents the frequency
-of all aisles, while Chart B and C focus on only three most frequent
-aisles from which products were purchased.</p>
+<div id="relevant-coursework" class="section level2">
+<h2>Relevant Coursework</h2>
+<p>Molecular Biology, Virology, Intro to Machine Learning, Probability,
+Categorical &amp; Multilevel data, Linear Model, etc.</p>
 </div>
+<div id="research-experience" class="section level2">
+<h2>Research Experience</h2>
+<p><strong>Wake Forest School of Medicine, Winston-Salem</strong></p>
+<p><em>Research Assistant, Department of Immunology</em></p>
+<ul>
+<li>Cleaned, visualized, and analyzed multivariate flow-cytometry data
+on over 1,000,000 cells using R</li>
+<li>Applied principal components method for dimensionality reduction and
+K-means clustering analysis</li>
+<li>Guided colleagues to construct an automated pipeline for anomaly
+detection using statistical metrics</li>
+<li>Senior project &amp; presentation; constructed a foundation for the
+group to continue the research on anomaly detection; reaffirmed the
+diagnostic potentials of the method for detecting cognitive decline in
+Alzheimer’s disease patients</li>
+</ul>
+<p><strong>Shanghai Jiao Tong University, Shanghai</strong></p>
+<p><em>Research Assistant, Department of Biomedical Engineering</em></p>
+<ul>
+<li>Investigated potential treatments for ischemic stroke in murine
+models</li>
+<li>Calculated the sample size that caters to experimental designs,
+participated actively during meetings<br />
+</li>
+<li>Presented to the whole group on how to make statistical
+interpretations and test hypotheses; effectively improved the
+understandings of experiment design for group members with no
+statistical background</li>
+</ul>
+</div>
+<div id="competition-prize" class="section level2">
+<h2>Competition Prize</h2>
+<p><strong>DataFest Competition, the American Statistical
+Association</strong></p>
+<ul>
+<li>Analyzed data from an educational game about drug abuse and STD
+prevention in 11-14 years old</li>
+<li>Collaborated as a team to clean highly complicated data containing
+over 1.5 million rows; applied machine learning methods including
+K-nearest means, random forest, and regression tree for modeling<br />
+</li>
+<li>Won first-place among the higher-level groups at Wake Forest
+University</li>
+<li>R scripts and analysis results were sent to the research group at
+Yale Center for Health &amp; Learning Games for evaluation of the game
+and insights into designing a more engaging game interface</li>
+</ul>
+</div>
+<div id="leadership-experiences" class="section level2">
+<h2>Leadership Experiences</h2>
+<p>Vice president at K-pop dance group, Core team organizer at Asia for
+campus-scale and inner-club events</p>
 </div>
 
 
